@@ -4,9 +4,9 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.sql.Connection;
-import java.sql.Date;
 import java.sql.DriverManager;
 import java.sql.SQLException;
  
@@ -15,6 +15,7 @@ import java.util.Calendar;
 import javax.servlet.RequestDispatcher;
 import javax.servlet.ServletContext;
 import javax.servlet.ServletException;
+import javax.servlet.annotation.MultipartConfig;
 import javax.servlet.annotation.WebServlet;
 import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
@@ -23,7 +24,6 @@ import javax.servlet.http.HttpSession;
 import javax.servlet.http.Part;
 
 import org.thymeleaf.TemplateEngine;
-import org.thymeleaf.context.WebContext;
 import org.thymeleaf.templatemode.TemplateMode;
 import org.thymeleaf.templateresolver.ServletContextTemplateResolver;
 
@@ -31,6 +31,7 @@ import it.polimi.tiw.playlist.beans.User;
 import it.polimi.tiw.playlist.dao.SongDAO;
 
 @WebServlet("/CreateSong")
+@MultipartConfig 
 public class CreateSong extends HttpServlet{
 	
 	private static final long serialVersionUID = 1L;
@@ -76,9 +77,14 @@ public class CreateSong extends HttpServlet{
 		String albumTitle = request.getParameter("albumTitle");
 		String singer = request.getParameter("singer");
 		String date = request.getParameter("date");
+		
 		Part albumImg = request.getPart("albumImg");
 		Part songFile = request.getPart("songFile");
 		
+		//I should do some controls about the user session
+		HttpSession s = request.getSession();
+		User user = (User) s.getAttribute("user");
+
 		String error = "";
 		
 		//Check if the user missed some parameters
@@ -91,7 +97,7 @@ public class CreateSong extends HttpServlet{
 		int publicationYear = Integer.parseInt(date);
 		
 		//Take the current year
-		int currentYear = Calendar.YEAR;
+		int currentYear = Calendar.getInstance().get(Calendar.YEAR);
 		
 		//Check if the publicationYear is not bigger than the current year
 		if(publicationYear > currentYear)
@@ -106,8 +112,8 @@ public class CreateSong extends HttpServlet{
 			error += "Album title too long;";
 		if(singer.length() > 45)
 			error += "Singer name too long;";
-			
-		//Take the type of the image file uploaded
+		
+		//Take the type of the image file uploaded : image/png
 		String contentTypeImg = albumImg.getContentType();
 		System.out.println("Image type is: " + contentTypeImg);
 
@@ -115,42 +121,65 @@ public class CreateSong extends HttpServlet{
 		if(!contentTypeImg.startsWith("image"))
 			error += "Image file not valid;";
 		
-		//Take the type of the music file uploaded
+		//Take the type of the music file uploaded : audio/mpeg
 		String contentTypeMusic = songFile.getContentType();
 		System.out.println("Music type is: " + contentTypeMusic);
 		
 		//Check the type of the music file uploaded
-		if(!contentTypeMusic.startsWith("mp3"))
+		if(!contentTypeMusic.startsWith("audio"))
 			error += "Music file not valid";
-		
-		//I should do some controls about the user session
-		HttpSession s = request.getSession();
-		User user = (User) s.getAttribute("user");
 		
 		//If an error occurred, redirect with errorMsg1 to the template engine  
 		if(!error.equals("")) {
-			String path = "/WEB-INF/HomePage.html";
-			ServletContext servletContext = getServletContext();
-			final WebContext ctx = new WebContext(request, response, servletContext, request.getLocale());
-			ctx.setVariable("errorMsg1", error);
-			templateEngine.process(path, ctx, response.getWriter());
+			request.setAttribute("error1", error);
+			String path = "/GoToHomePage";
+
+			RequestDispatcher dispatcher = getServletContext().getRequestDispatcher(path);
+			dispatcher.forward(request,response);
 		}
 		
-		//Take the path where store the image
-		String fileNameImg = Paths.get(albumImg.getSubmittedFileName()).getFileName().toString();
+		//Take the name of the image uploaded
+		String fileNameImg = Path.of(albumImg.getSubmittedFileName()).getFileName().toString();
+		System.out.println("Test image: " + albumImg.getSubmittedFileName());
+		System.out.println("Test 1: "+ Paths.get(albumImg.getSubmittedFileName()));
 		System.out.println("Filename image: " + fileNameImg);
 		
-		//Take the path where store the music file
+		//Take the name of the song uploaded
 		String fileNameSong = Paths.get(songFile.getSubmittedFileName()).getFileName().toString();
 		System.out.println("Filename music: " + fileNameSong);
 		
-		//Create the final path for images adding the user id in the end to avoid error in case of duplicate name;
-		String outputPathImg = imgFolderPath + fileNameImg + "_" + user.getId();
+		//Create the final path for images adding the user id in the start to avoid error in case of duplicate name;
+		String outputPathImg = imgFolderPath + user.getId() + "_" + fileNameImg;
 		System.out.println("Output path img: " + outputPathImg);
 		
-		//Create the final part for music files adding the user id in the end to avoid error in case of duplicate name;
-		String outputPathSong = mp3FolderPath + fileNameSong + "_" + user.getId();
+		//Create the final part for music files adding the user id in the start to avoid error in case of duplicate name;
+		String outputPathSong = mp3FolderPath + user.getId()  + "_" + fileNameSong;
 		System.out.println("Output path song: " + outputPathSong);
+		
+		//Check if the final path are not too long
+		if(fileNameSong.length() > 255)
+			error += "Song name too long;";
+		if(fileNameImg.length() > 255) {
+			error += "Image name too long;";
+		}
+		//Check if a song or an image with the same name already exist
+		File tempFile = new File(outputPathImg);
+		if(tempFile.exists())
+			error += "Image name already exists;";
+		tempFile = new File(outputPathSong);
+		if(tempFile.exists())
+			error += "Song name already exists;";
+		System.out.println("Error is: " + error);
+		
+		//If an error occurred, redirect with errorMsg1 to the template engine  
+		if(!error.equals("")) {
+			request.setAttribute("error1", error);
+			String path = "/GoToHomePage";
+
+			RequestDispatcher dispatcher = getServletContext().getRequestDispatcher(path);
+			dispatcher.forward(request,response);
+			return;
+		}
 		
 		//Save the image
 		File fileImg = new File(outputPathImg);
@@ -178,11 +207,17 @@ public class CreateSong extends HttpServlet{
 		
 		//If an error occurred, redirect with errorMsg1 to the template engine  
 		if(!error.equals("")) {
-			String path = "/WEB-INF/HomePage.html";
+			/*String path = "/WEB-INF/HomePage.html";
 			ServletContext servletContext = getServletContext();
 			final WebContext ctx = new WebContext(request, response, servletContext, request.getLocale());
+			ctx.setVariable("user", user); 
 			ctx.setVariable("errorMsg1", error);
-			templateEngine.process(path, ctx, response.getWriter());
+			templateEngine.process(path, ctx, response.getWriter());*/
+			request.setAttribute("error1", error);
+			String path = "/GoToHomePage";
+
+			RequestDispatcher dispatcher = getServletContext().getRequestDispatcher(path);
+			dispatcher.forward(request,response);
 		}
 		
 		//Now it's possible update the data base
@@ -197,8 +232,8 @@ public class CreateSong extends HttpServlet{
 				response.sendRedirect(path);
 			}
 			else {
-				error += "Impossible upload the database , try later";
-				request.setAttribute("error", error);
+				error += "Impossible upload file in the database , try later";
+				request.setAttribute("error1", error);
 				String path = "/GoToHomePage";
 
 				RequestDispatcher dispatcher = getServletContext().getRequestDispatcher(path);
